--- a/src/common/envs/development.env
+++ b/src/common/envs/development.env
@@ -3,7 +3,7 @@ PORT=3001
 DATABASE_HOST=localhost
 DATABASE_NAME=arduino_proj
 DATABASE_USER=postgres
-DATABASE_PASSWORD=
+DATABASE_PASSWORD=ckhdctl13
 DATABASE_PORT=5433
 
 JWT_KEY=dev
